<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="vertical"
        android:fadeScrollbars="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/courseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="5dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/courseTitleEdit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignBaseline="@+id/courseTitle"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/courseTitle"
                android:hint="@string/enter_a_course_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="#757575"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/courseStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/courseTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="5dp"
                android:text="@string/start_date"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/courseStartDateEdit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignBaseline="@+id/courseStartDate"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/courseStartDate"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="select a start date (req)"
                android:importantForAutofill="no"
                android:longClickable="false"
                android:textColorHint="#757575"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/courseEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/courseStartDate"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/end_date"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_course_end_date"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_alignBaseline="@+id/courseEndDate"
                android:layout_alignStart="@+id/courseStartDateEdit"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@id/courseNotifySwitch"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="select an end date (req)"
                android:importantForAutofill="no"
                android:longClickable="false"
                android:textColorHint="#757575"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/courseNotifySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/text_view_course_end_date"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:minWidth="48dp"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/courseNotifySwitch"
                android:layout_alignStart="@+id/courseNotifySwitch"
                android:layout_alignEnd="@id/courseNotifySwitch"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="0dp"
                android:text="@string/notify_switch"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/courseStatusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/courseEndDate"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="5dp"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/courseStatus"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_below="@+id/courseStatusTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/status" />

            <TextView
                android:id="@+id/linkedTermTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/courseStatusTitle"
                android:layout_alignStart="@id/linkedTerm"
                android:text="@string/term_enrolled"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/linkedTerm"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/linkedTermTitle"
                android:layout_toEndOf="@id/courseStatus"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/term_enrolled"/>

            <TextView
                android:id="@+id/mentorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/courseStatus"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="5dp"
                android:text="@string/mentor"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mentorNameEdit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignBaseline="@+id/mentorName"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/mentorName"
                android:hint="@string/enter_mentors_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="#757575"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/mentorPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mentorName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="5dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mentorPhoneEdit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignBaseline="@+id/mentorPhone"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/mentorName"
                android:hint="@string/enter_mentors_phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColorHint="#757575"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/mentorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mentorPhone"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="5dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mentorEmailEdit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignBaseline="@+id/mentorEmail"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/mentorName"
                android:hint="@string/enter_mentors_email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="#757575"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/assessmentListHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/mentorEmail"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24sp"
                android:layout_marginBottom="10sp"
                android:text="@string/assessment_list"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/courseAddAssessmentButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_toEndOf="@id/assessmentListHead"
                android:layout_alignTop="@id/assessmentListHead"
                android:layout_marginTop="-13dp"
                android:padding="10dp"
                android:contentDescription="@string/add_course"
                app:tint="@color/black"
                app:srcCompat="@drawable/ic_add"
                style="?android:borderlessButtonStyle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/courseAssessmentList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_below="@id/assessmentListHead"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                tools:listitem="@layout/recyclerview_item_small" />

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>