<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="vertical"
        android:fadeScrollbars="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/assessmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="5dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/assessmentTitleEdit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignBaseline="@+id/assessmentTitle"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/assessmentTitle"
                android:hint="@string/enter_an_assessment_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="#757575"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/assessmentGoalDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/assessmentTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="5dp"
                android:text="@string/completion_goal_date"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/assessmentGoalDateEdit"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_alignBaseline="@+id/assessmentGoalDate"
                android:layout_toEndOf="@+id/assessmentGoalDate"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@id/assessmentNotifySwitch"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/select_a_completion_goal_date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:longClickable="false"
                android:textColorHint="#757575"
                android:textSize="17sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/assessmentNotifySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/assessmentGoalDateEdit"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:minWidth="48dp"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/assessmentNotifySwitch"
                android:layout_alignStart="@+id/assessmentNotifySwitch"
                android:layout_alignEnd="@id/assessmentNotifySwitch"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="0dp"
                android:text="@string/notify_switch"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/assessmentTypeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/assessmentGoalDate"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:text="@string/assessment_type"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/assessmentType"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/assessmentTypeTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/assessment_type" />

            <TextView
                android:id="@+id/linkedCourseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/assessmentType"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:text="@string/course"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/linkedCourse"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/linkedCourseTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/course"/>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>